apps/qbittorrent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: apps
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
